(executable
 (public_name chapgame)
 (name main)
 (libraries chapgame dream core dream-encoding)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps ../client/main.bc.js ../client/index.html)
 (action
  (bash "%{bin:ocaml-embed-file} %{deps} -output embedded_files")))
