(executable
 (public_name chapgame)
 (package chapgame)
 (name main)
 (libraries chapgame dream core dream-encoding)
 (preprocess
  (pps ppx_jane)))

(rule
 (target assets.ml)
 (deps assets/index.html assets/main.bc.js)
 (action
  (with-stdout-to
   %{null}
   (run ocaml-crunch -m plain assets -o %{target}))))
