(executable
 (name bibliography)
 (libraries core)
 (preprocess
  (pps ppx_jane)))

(rule
 (target c2-bibliography.tex)
 (deps bibliography.exe)
 (action
  (run %{deps})))

(rule
 (target thesis.pdf)
 (deps
  thesis.tex
  preamble.tex
  a1-title.tex
  s1-title.tex
  s2-assignment.tex
  a2-abstract.tex
  a3-toc.tex
  a4-intro.tex
  b1-theory.tex
  b2-design.tex
  b3-implementation.tex
  b4-usage.tex
  c1-outro.tex
  c2-bibliography.tex
  ../images/solver.pdf
  ../images/libsdiagram.pdf
  ../images/derivative.pdf
  ../images/roots.pdf
  ../images/exprdiagram.pdf
  ../images/exprtest.pdf
  ../images/exprgadt.pdf
  ../images/exprpolytest.pdf
  ../images/samplepolyplot.png
  ../images/dotprd.pdf
  ../images/screen1.png
  ../images/screen2.png)
 (action
  (progn
   (run %{bin:xelatex} "thesis.tex")
   (run %{bin:xelatex} "thesis.tex")
   (run %{bin:xelatex} "thesis.tex"))))

(rule
 (target assignment.pdf)
 (deps assignment.tex preamble.tex s1-title.tex s2-assignment.tex)
 (action
  (progn
   (run %{bin:xelatex} "assignment.tex")
   (run %{bin:xelatex} "assignment.tex")
   (run %{bin:xelatex} "assignment.tex"))))

(rule
 (target presentation.pdf)
 (deps
  presentation.tex
  ../images/equation_deg3_plot.png
  ../images/body_second_root.png
  ../images/body_init.png
  ../images/body_collision.png
  ../images/body_aposteriori.png
  ../images/chapgame_1.png
  ../images/chapgame_2.png)
 (action
  (progn
   (run %{bin:xelatex} "presentation.tex")
   (run %{bin:xelatex} "presentation.tex")
   (run %{bin:xelatex} "presentation.tex"))))
